--- a/Bitbound.Blazor.ServiceProxyGenerator/Bitbound.Blazor.ServiceProxyGenerator.csproj
+++ b/Bitbound.Blazor.ServiceProxyGenerator/Bitbound.Blazor.ServiceProxyGenerator.csproj
@@ -20,6 +20,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.assets\bitbound.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
