--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       registryApiKey: ${{ secrets.NUGET_API_KEY }}
     with:
       projectOrSlnDir: "./Bitbound.Blazor.ServiceProxyGenerator"
-      prerelease: true
+      prerelease: false
       majorVersion: 1
       minorVersion: 1
       runTests: true
