--- a/Bitbound.Blazor.ServiceProxyGenerator/Bitbound.Blazor.ServiceProxyGenerator.csproj
+++ b/Bitbound.Blazor.ServiceProxyGenerator/Bitbound.Blazor.ServiceProxyGenerator.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Core" Version="5.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
